--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "eleventy --serve",
-    "dev": "rm -rf _site && eleventy --serve"
+    "dev": "rm -rf _site && eleventy --serve",
+    "build": "rm -rf _site && eleventy"
   },
   "keywords": [],
   "author": "",
