--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portfolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "A personal portfolio website built with Eleventy",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "eleventy --serve",
