fixed the html mime type

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,16 +5,15 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
-  # Default charset for text/* responses
   charset utf-8;
-
-  # Make sure common text types declare UTF-8
   types {
+    text/html   html htm;
     text/plain  txt;
     text/css    css;
     application/javascript js;
     application/json json;
     text/markdown md;
+    image/svg+xml svg;
   }
 
   location / {
